Templates/Network/Virtual Network/BluebankNetwork.Template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "POC": {
            "type": "string",
            "maxLength": 4,
            "metadata": {
                "description": "The name of the POC or Proof of Concept"
            }
        },
        "location": {
            "type": "string",
            "allowedValues": [
                "UKWest",
                "UKSouth"
            ],
            "metadata": {
                "description": "Location that the resources will be deployed to"
            }
        },
        "environment": {
            "type": "string",
            "allowedValues": [
                "Prod",
                "DEV",
                "TST",
                "DT"
            ],
            "metadata": {
                "description": "Environment name"
            }
        },
        "owner": {
            "type": "string",
            "metadata": {
                "description": "The owner / developer of the resource"
            }
        },
        "VNet_Name": {
            "type": "string",
            "allowedValues":[
                "Network"
            ]
        },
        "VNet_AddressSpace": {
            "type": "string"
        },
        "subnet_Outside_Name": {
            "type": "string",
            "allowedValues":[
                "Outside"
            ]
        },
        "subnet_Outside_AddressSpace": {
            "type": "string"
        },
        "subnet_DMZ_Name": {
            "type": "string",
            "allowedValues":[
                "DMZ"
            ]
        },
        "subnet_DMZ_AddressSpace": {
            "type": "string"
        },
        "subnet_Inside_1_Name": {
            "type": "string",
            "allowedValues":[
                "Inside1",
                "DataScience"
            ]
        },
        "subnet_Inside_1_Name_AddressSpace": {
            "type": "string"
        },
        "subnet_Inside_2_Name": {
            "type": "string",
            "allowedValues":[
                "Inside2",
                "Infrastructure"
            ]
        },
        "subnet_Inside_2_Name_AddressSpace": {
            "type": "string"
        },
        "subnet_Inside_3_Name": {
            "type": "string",
            "allowedValues":[
                "Inside3"
            ]
        },
        "subnet_Inside_3_Name_AddressSpace": {
            "type": "string"
        }
    },
    "variables": {
        "locationShort": "[substring(Parameters('location'),0,3)]",
        "VNet_Name": "[concat(parameters('POC'),'-VNET-',parameters('VNet_Name'),'-',parameters('environment'),'-',variables('locationShort'))]",
        "subnet_Outside_Name": "[concat(parameters('POC'),'-VNET-Sub-',parameters('subnet_Outside_Name'),'-',parameters('environment'),'-',variables('locationShort'))]",
        "subnet_DMZ_Name": "[concat(parameters('POC'),'-VNET-Sub-',parameters('subnet_DMZ_Name'),'-',parameters('environment'),'-',variables('locationShort'))]",
        "subnet_Inside_1_Name": "[concat(parameters('POC'),'-VNET-Sub-',parameters('subnet_Inside_1_Name'),'-',parameters('environment'),'-',variables('locationShort'))]",
        "subnet_Inside_2_Name": "[concat(parameters('POC'),'-VNET-Sub-',parameters('subnet_Inside_2_Name'),'-',parameters('environment'),'-',variables('locationShort'))]",
        "subnet_Inside_3_Name": "[concat(parameters('POC'),'-VNET-Sub-',parameters('subnet_Inside_3_Name'),'-',parameters('environment'),'-',variables('locationShort'))]",
        "NSG_Outside_Name": "[concat(parameters('POC'),'-NSG-',parameters('subnet_Outside_Name'),'-',parameters('environment'),'-',variables('locationShort'))]",
        "NSG_DMZ_Name": "[concat(parameters('POC'),'-NSG-',parameters('subnet_DMZ_Name'),'-',parameters('environment'),'-',variables('locationShort'))]",
        "NSG_Inside_1_Name": "[concat(parameters('POC'),'-NSG-',parameters('subnet_Inside_1_Name'),'-',parameters('environment'),'-',variables('locationShort'))]"
    },
    "resources": [
        {
            "comments": "Virtual Network",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('VNet_Name')]",
            "apiVersion": "2017-10-01",
            "location": "[parameters('location')]",
            "tags": {
                "Subscription": "[Subscription().displayName]",
                "POC": "[parameters('POC')]",
                "RG": "[resourceGroup().name]",
                "Environment": "[parameters('environment')]",
                "Owner": "[parameters('owner')]"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('VNet_AddressSpace')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('subnet_Outside_Name')]",
                        "properties": {
                            "addressPrefix": "[parameters('subnet_Outside_AddressSpace')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('NSG_Outside_Name'))]"
                            }
                        }
                    },
                    {
                        "name": "[variables('subnet_DMZ_Name')]",
                        "properties": {
                            "addressPrefix": "[parameters('subnet_DMZ_AddressSpace')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('NSG_DMZ_Name'))]"
                            }
                        }
                    },
                    {
                        "name": "[variables('subnet_Inside_1_Name')]",
                        "properties": {
                            "addressPrefix": "[parameters('subnet_Inside_1_Name_AddressSpace')]",
                            "serviceEndpoints": [
                                {
                                  "service": "Microsoft.Sql",
                                  "locations": [
                                    "UK West",
                                    "UK South"
                                  ]
                                },
                                {
                                    "service": "Microsoft.Storage",
                                    "locations": [
                                      "UK West"
                                    ]
                                  }
                            ],
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('NSG_Inside_1_Name'))]"
                            }
                        }
                    },
                    {
                        "name": "[variables('subnet_Inside_2_Name')]",
                        "properties": {
                            "addressPrefix": "[parameters('subnet_Inside_2_Name_AddressSpace')]",
                            "serviceEndpoints": [
                                {
                                  "service": "Microsoft.Sql",
                                  "locations": [
                                    "UK West",
                                    "UK South"
                                  ]
                                },
                                {
                                    "service": "Microsoft.Storage",
                                    "locations": [
                                      "UK West"
                                    ]
                                  }
                            ]
                        }
                    },
                    {
                        "name": "[variables('subnet_Inside_3_Name')]",
                        "properties": {
                            "addressPrefix": "[parameters('subnet_Inside_3_Name_AddressSpace')]",
                            "serviceEndpoints": [
                                {
                                  "service": "Microsoft.Sql",
                                  "locations": [
                                    "UK West",
                                    "UK South"
                                  ]
                                },
                                {
                                    "service": "Microsoft.Storage",
                                    "locations": [
                                      "UK West"
                                    ]
                                  }
                            ]
                        }
                    }
                ],
                "virtualNetworkPeerings": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('NSG_DMZ_Name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('NSG_Inside_1_Name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('NSG_Outside_Name'))]"
            ]
        },
        {
            "comments": "NSG Outside",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('NSG_Outside_Name')]",
            "apiVersion": "2017-06-01",
            "location": "[parameters('location')]",
            "tags": {
                "Subscription": "[Subscription().displayName]",
                "POC": "[parameters('POC')]",
                "RG": "[resourceGroup().name]",
                "Environment": "[parameters('environment')]",
                "Owner": "[parameters('owner')]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "81.145.169.251/32",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Port_443",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "81.145.169.251/32",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 105,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Port_2022_ssh",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "2022",
                            "sourceAddressPrefix": "81.145.169.251/32",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "PaulS_Port_443",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "82.46.45.93",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "PaulS_Port_22",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "82.46.45.93",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "properties": {
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "properties": {
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "properties": {
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "properties": {
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "properties": {
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "properties": {
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "NSG - DMZ",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('NSG_DMZ_Name')]",
            "apiVersion": "2017-06-01",
            "location": "[parameters('location')]",
            "tags": {
                "Subscription": "[Subscription().displayName]",
                "POC": "[parameters('POC')]",
                "RG": "[resourceGroup().name]",
                "Environment": "[parameters('environment')]",
                "Owner": "[parameters('owner')]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "properties": {
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "properties": {
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "properties": {
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "properties": {
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "properties": {
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "properties": {
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "NSG - Inside_1",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('NSG_Inside_1_Name')]",
            "apiVersion": "2017-06-01",
            "location": "[parameters('location')]",
            "tags": {
                "Subscription": "[Subscription().displayName]",
                "POC": "[parameters('POC')]",
                "RG": "[resourceGroup().name]",
                "Environment": "[parameters('environment')]",
                "Owner": "[parameters('owner')]"
            },
            "properties": {
                "securityRules": [
                ],
                "defaultSecurityRules": []
            },
            "dependsOn": []
        }
    ]
}
